# pdftool

./: .gitignore  pdftool.py  pyproject.toml
