[build-system]
requires = [
    "setuptools",
	"setuptools-scm"
]
build-backend = "setuptools.build_meta"

[project]
name = "pdftool"
dynamic = ["version"]
description = "Экспорт pdf в растр"
dependencies = [
	"pymupdf"
]

[project.scripts]
pdftool = "pdftool:main"

[tool.setuptools.dynamic]
version = {attr = "pdftool.__version__"}